<resources>
    <string name="app_name">MovieApp</string>
    <string name="app_name_2">MovieApp2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_google">Or sign in with</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in_title">GiMovie</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="register_button">SIGN IN</string>
    <string name="sign_in_with_google">Google</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="already_user">Already a user?</string>
    <string name="terms_policy">Accept </string>
    <string name="terms"> terms and conditions</string>
    <string name="register_txt">Register</string>
    <string name="first_name">First name</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="last_name">Last name</string>
    <string name="confirm_terms">Confirm</string>
    <string name="login_auth_failed">The password or username was inserted incorrectly</string>
    <string name="register_auth_failed">Registration incomplete.</string>
</resources>