<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/our_app_background"
    tools:context="tig167.movieapp.LoginActivity"
    android:weightSum="1">

    <!-- Login progress -->


    <ImageView
        android:layout_width="192dp"
        android:layout_height="98dp"
        app:srcCompat="@drawable/user_icon"
        android:id="@+id/imageView3" />


    <LinearLayout

            android:id="@+id/email_login_form"

            android:layout_marginTop="120dp"

            android:orientation="vertical"
            android:weightSum="1"


                android:layout_width="match_parent"
                android:layout_height="wrap_content">


        <AutoCompleteTextView

            android:id="@+id/email"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#000000"

            android:background="@drawable/loginactivity_border"
            android:padding="10dp"
            />


        <EditText
                    android:id="@+id/password"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/loginactivity_border"
                    android:padding="10dp"
                    android:textColorHint="#000000"
                    android:singleLine="true"
            android:layout_marginTop="10dp" />


        <TextView

            android:text="@string/forgot_password"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="#ffffff"/>

        <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="#000000"
                android:background="@drawable/custom_button"

                android:textStyle="bold"
            android:layout_marginTop="50dp" />

        </LinearLayout>

</LinearLayout>
