<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/our_app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:layout_width="189dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/register_user_icon"
        android:id="@+id/imageView" />

    <EditText
        android:layout_width="match_parent"
        android:gravity="center"
        android:onClick="clearTextView"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/white"
        android:hint="@string/first_name"
        android:padding="10dp"
        android:background="@drawable/loginactivity_border"
        android:ems="10"
        android:id="@+id/editText" />

    <EditText
        android:padding="10dp"
        android:onClick="true"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/loginactivity_border"
        android:hint="@string/last_name"
        android:ems="10"
        android:id="@+id/editText2" />

    <AutoCompleteTextView
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/loginactivity_border"
        android:textColorHint="@color/white"
        android:hint="@string/prompt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/autoCompleteTextView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/loginactivity_border"
            android:hint="Password"
            android:textColorHint="#ffffff"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="160dp"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/loginactivity_border"
            android:inputType="textPassword"
            android:ems="10"
            android:textColorHint="#ffffff"
            android:id="@+id/editText4"
            android:hint="@string/prompt_password"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_below="@+id/editText6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <CheckBox
                android:text="@string/terms_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
            android:layout_marginTop="0dp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorAccent"
            android:text="@string/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"

            />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/register_txt"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_button"
            android:layout_width="200dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/button5" />
    </RelativeLayout>

</LinearLayout>